# dominion

./: .gitignore  .travis.yml  Makefile  README.md  RESULTS.md  TODOS.markdown  dominion.cabal  stack.yaml
spec/: Main.hs
src/: Card.hs  Dominion.hs  GameState.hs  Main.hs  Player.hs  Strategies.hs  Utils.hs
src/Dominion/: Cards.hs  Internal.hs  Strategies.hs  Types.hs  Utils.hs
src/Dominion/Cards/: Base.hs  Intrigue.hs  Original.hs
src/Language/Haskell/HsColour/: ANSI.hs
src/System/Random/: Shuffle.hs
