name:                dominion
version:             0.1.0.4
homepage:            http://github.com/egonschiele/dominion
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:           
category:            Game, Simulation
build-type:          Simple
cabal-version:       >=1.8
synopsis: A simulator for the board game Dominion.
description: A simulator for the board game Dominion.

executable dominion
  build-depends:       base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3
  hs-source-dirs:      src
  main-is: Main.hs

Test-Suite test-dominion
  type:       exitcode-stdio-1.0
  build-depends:       base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3, dominion, hspec ==1.7.2.1
  hs-source-dirs:      spec, src
  main-is:             Main.hs

Library
  Exposed-modules: Dominion, Dominion.Cards, Dominion.Cards.Base, Dominion.Cards.Original, Dominion.Cards.Intrigue, Dominion.Strategies, Dominion.Types, Dominion.Internal
  Build-depends: base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3
  Other-modules: Dominion.Utils
  hs-source-dirs:      src
