name:                dominion
version:             0.1.1.0
homepage:            http://github.com/egonschiele/dominion
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:
category:            Game, Simulation
build-type:          Simple
cabal-version:       >=1.8
synopsis: A simulator for the board game Dominion.
description: A simulator for the board game Dominion.

executable dominion
  build-depends:       base < 5, mtl, lens, random, containers
  hs-source-dirs:      src
  main-is: Main.hs

Test-Suite test-dominion
  type:       exitcode-stdio-1.0
  build-depends:       base, mtl, lens, random, containers, dominion, hspec
  hs-source-dirs:      spec, src
  main-is:             Basic.hs

Library
  Exposed-modules: Dominion, Dominion.Cards, Dominion.Cards.Base, Dominion.Cards.Original, Dominion.Cards.Intrigue, Dominion.Strategies, Dominion.Types, Dominion.Internal
  build-depends:       base, mtl, lens, random, containers
  Other-modules: Dominion.Utils, Language.Haskell.HsColour.ANSI, System.Random.Shuffle
  hs-source-dirs:      src
